--- a/html/Accueil - home.html
+++ b/html/Accueil - home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Accueil - home</title>
+  <title>Accueil
+
+  </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/common.css">
 
   <!-- Load font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -12,7 +15,7 @@
 
 </head>
 
-<body id="home">
+<body>
 
   <!-- HEADER -->
   <div class="m-50">
@@ -25,12 +28,12 @@
         <i class="fas fa-star mr-8"></i>
         Compétences
       </a>
-      <a href="Contact - contact.html" style="text-decoration: none; color: black;" class="menu-text">
-        <i class="fas fa-users mr-8"></i>
-        Projets
-      </a>
       <a href="Projets - projects.html" style="text-decoration: none; color: black;" class="menu-text">
         <i class="fas fa-id-card mr-8"></i>
+        Projets
+      </a>
+      <a href="Contact - contact.html" style="text-decoration: none; color: black;" class="menu-text">
+        <i class="fas fa-users mr-8"></i>
         Nous contacter
       </a>
   </div>
