--- a/html/Projets - projects.html
+++ b/html/Projets - projects.html
@@ -4,7 +4,11 @@
   <title>Projets</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/center.css">
+  <link rel="stylesheet" href="../css/div.css">
+  <link rel="stylesheet" href="../css/elements.css">
+  <link rel="stylesheet" href="../css/underline.css">
+  <link rel="stylesheet" href="../css/margin.css">
 
   <!-- Load font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
