feat(home): :sparkles: add presentation text (ines)

--- a/html/Contact - contact.html
+++ b/html/Contact - contact.html
@@ -44,8 +44,7 @@
 
     <div class="col-sm-12">
         <div class="col-sm-6">
-            <h1 class="yellow-underline ml-50 mt-125"><i
-                    class="mr-18 fas fa-map-marker-alt"></i>Adresse</h1>
+            <h1 class="yellow-underline ml-50 mt-125"><i class="mr-18 fas fa-map-marker-alt"></i>Adresse</h1>
             <p class="ml-50">300, allée des Ursulines, C.P. 3300, succ. A, 300 All. des Ursulines, Rimouski, QC G5L 3A1
             </p>
             <h1 class="yellow-underline ml-50"><i class="mr-18 fas fa-phone-alt"></i>Téléphone</h1>
