--- a/html/Accueil - home.html
+++ b/html/Accueil - home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Accueil
 
@@ -23,61 +24,71 @@
 
   <!-- HEADER -->
   <div class="m-50">
-        <img src="../img/logo.png">
-      <a href="Accueil - home.html" style="text-decoration: none; color: black;" class="menu-text">
-        <i class="fas fa-home mr-8"></i>
-        Accueil
-      </a>
-      <a href="Competences - skills.html" style="text-decoration: none; color: black;" class="menu-text">
-        <i class="fas fa-star mr-8"></i>
-        Compétences
-      </a>
-      <a href="Projets - projects.html" style="text-decoration: none; color: black;" class="menu-text">
-        <i class="fas fa-id-card mr-8"></i>
-        Projets
-      </a>
-      <a href="Contact - contact.html" style="text-decoration: none; color: black;" class="menu-text">
-        <i class="fas fa-users mr-8"></i>
-        Nous contacter
-      </a>
+    <img src="../img/logo.png">
+    <a href="Accueil - home.html" style="text-decoration: none; color: black;" class="menu-text">
+      <i class="fas fa-home mr-8"></i>
+      Accueil
+    </a>
+    <a href="Competences - skills.html" style="text-decoration: none; color: black;" class="menu-text">
+      <i class="fas fa-star mr-8"></i>
+      Compétences
+    </a>
+    <a href="Projets - projects.html" style="text-decoration: none; color: black;" class="menu-text">
+      <i class="fas fa-id-card mr-8"></i>
+      Projets
+    </a>
+    <a href="Contact - contact.html" style="text-decoration: none; color: black;" class="menu-text">
+      <i class="fas fa-users mr-8"></i>
+      Nous contacter
+    </a>
   </div>
 
   <!-- INES -->
 
   <div class="col-sm-12 center">
+    <div class="col-sm-8">
       <div class="col-sm-8">
-        <div class="col-sm-8">
-          <h1 class="pink-underline">Inès Maaroufi</h1>
-          <subtext>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</subtext>
-        </div>
-        <div class="col-sm-4">
-          <img src="../img/ines.png">
-
-        </div>
+        <h1 class="pink-underline">Inès Maaroufi</h1><br>
+        <subtext>Inès Maaroufi est une étudiante de 20 ans inscrite en quatrième année à Epitech, une école
+          d'informatique en France. Elle a récemment entrepris un programme d'échange à l'UQAR au Canada.
+          Son séjour à l'UQAR lui permet de découvrir une nouvelle culture et d'améliorer ses compétences informatique
+          tout en participant à des activités académiques. Elle interagit avec d'autres étudiants et enseignants
+          canadiens dans le cadre de cet échange.
+          Elle souhaite s'orienter vers le développement fullstack à la fin de ses études</subtext>
       </div>
+      <div class="col-sm-4">
+        <img src="../img/ines.png">
+
+      </div>
+    </div>
   </div>
 
   <!-- THEO -->
 
   <div class="col-sm-12 center">
-      <div class="col-sm-8">
-        <div class="col-sm-4">
-          <img src="../img/theo.png">
-        </div>
-        <div class="col-sm-8">
-          <h1 class="blue-underline">Théo Regheasse</h1>
-          <subtext>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</subtext>
-        </div>
+    <div class="col-sm-8">
+      <div class="col-sm-4">
+        <img src="../img/theo.png">
       </div>
+      <div class="col-sm-8">
+        <h1 class="blue-underline">Théo Regheasse</h1><br>
+        <subtext>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.</subtext>
+      </div>
+    </div>
   </div>
 
   <!-- FOOTER -->
 
   <div class="col-sm-12 center-footer">
     <h2 class="yellow-underline">Newsletter</h2>
-    <br>  
+    <br>
     <form><i class="fas fa-envelope fa-lg"></i></label>
-      <input type="text" value="e-mail" name="name" id="name" >
+      <input type="text" value="e-mail" name="name" id="name">
       <input type="submit" value="S'abonner">
     </form>
     <br>
@@ -87,4 +98,5 @@
   </div>
 
 </body>
+
 </html>
