[ADD] - Main page description

--- a/html/Competences - skills.html
+++ b/html/Competences - skills.html
@@ -40,6 +40,7 @@
     </a>
   </div>
 
+  <!-- FOOTER-->
   <div class="col-sm-12 center-footer">
     <h2 class="yellow-underline">Newsletter</h2>
     <br>
