--- a/html/Accueil - home.html
+++ b/html/Accueil - home.html
@@ -72,12 +72,10 @@
       </div>
       <div class="col-sm-8">
         <h1 class="blue-underline">Théo Regheasse</h1><br>
-        <subtext>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.</subtext>
+        <subtext>Théo est un étudiant de 20 ans également en quatrième année a Epitech et en programme d'Échange à l'UQAR.
+          Ayant effectué un voyage au Quebec en 2018, il a décidé de saisir l'opportunité de revenir grâce au programme d'échange.
+          Passioné de Cybersécurité, il souhaite s'orienter vers ce domaine à la fin de ses études.
+        </subtext>
       </div>
     </div>
   </div>
