[ADD] - Competencies page

--- a/html/Competences - skills.html
+++ b/html/Competences - skills.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/elements.css">
   <link rel="stylesheet" href="../css/underline.css">
   <link rel="stylesheet" href="../css/margin.css">
+  <link rel="stylesheet" href="../css/images.css">
 
   <!-- Load font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -40,7 +41,53 @@
     </a>
   </div>
 
-  <!-- FOOTER-->
+  <!-- CONTENT -->
+  <div class="container center">
+    <div class="row justify-content-center">
+      <div class="col-sm-8">
+        <h1 class="pink-underline">Compétences</h1>
+        <h3>Voici les compétences que nous avons acquises au cours de nos études et de nos expériences professionnelles.
+        </h3>
+
+        <div class="row mt-5">
+
+          <div class="col-md-4">
+            <div class="d-flex align-items-center">
+              <img src="../img/c.png" alt="Competency Image 2" class="img-fluid mb-2 competency-image">
+              <p class="highlighted-description ms-2">Le langage C est le premier langage que nous apprenons a Epitech
+                en 1ère année.
+                C'est un langage dit "bas niveau" qui permet une compréhension fine de la machine et de la mémoire.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="d-flex align-items-center">
+              <img src="../img/cpp.png" alt="Competency Image 3" class="img-fluid mb-2 competency-image">
+              <p class="highlighted-description ms-2">Le langage C++ est un langage basé sur le C Offrant un contrôle
+                similaire sur la mémoire
+                mais en apportant le paradigme d'orienté objet. Il permet de développer des applications complexes et
+                performantes.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="d-flex align-items-center">
+              <img src="../img/dokcer.png" alt="Competency Image 1" class="img-fluid mb-2 competency-image">
+              <p class="highlighted-description ms-2">Docker est un outil de Devops. Il permet de déployer simplement
+                tout type d'application
+                sans avoir a se soucier des versions et de la stabilité du déploiement.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
   <div class="col-sm-12 center-footer">
     <h2 class="yellow-underline">Newsletter</h2>
     <br>
