[ADD] - Project page

--- a/html/Projets - projects.html
+++ b/html/Projets - projects.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/elements.css">
   <link rel="stylesheet" href="../css/underline.css">
   <link rel="stylesheet" href="../css/margin.css">
+  <link rel="stylesheet" href="../css/images.css">
 
   <!-- Load font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -40,6 +41,50 @@
     </a>
   </div>
 
+  <!-- CONTENT -->
+  <div class="container mt-5">
+  <div class="row">
+      <div class="col-12 text-center">
+          <h1>Projets</h1>
+          <p>Voici quelques projets réalisés durant notre scolarité</p>
+      </div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-4 mx-auto center-content">
+          <div class="circle" style="background-image: url('../img/sokoban.png');"></div>
+          <h3>Sokoban</h3>
+          <p>Le sokoban est un projet de première année a Epitech. Il consiste a recréer le jeux éponyme grâce a NCURSES,
+              une librairie graphique en C.
+          </p>
+          <p>Il est relativement simple a réaliser mais reste cependant l'un des projets préférés des étudiants de première année.</p>
+          <a href="https://fr.wikipedia.org/wiki/Sokoban" role="button" class="btn btn-primary">Bouton</a>
+      </div>
+
+      <div class="col-md-4 mx-auto center-content">
+        <div class="circle" style="background-image: url('../img/bomberman.png');"></div>
+        <h3>Bomberman</h3>
+        <p>En deuxième année cette fois ci, nous avons du refaire le jeux Bomberman, célèbre sur les consoles nintendo.
+            Ce projet est d'autant plus complexe qu'il utilise une library 3D, la RayLib. Il faut donc découvrir la gestion de la
+            caméra et d'autres notions de 3D.
+        </p>
+        <p>Le projet est très apprécié mais relativement peu réussi de part sa complexité.</p>
+        <a href="https://fr.wikipedia.org/wiki/Bomberman" role="button" class="btn btn-primary">Bouton</a>
+    </div>
+
+    <div class="col-md-4 mx-auto center-content">
+      <div class="circle" style="background-image: url('../img/gomoku.png');"></div>
+      <h3>Gomoku</h3>
+      <p>C'est également un projet de deuxième année, plus porté sur l'IA cette fois ci. Le but est de concevoir un bot capable
+          de jouer au jeux de Gomoku, une variation du jeux de go.
+      </p>
+      <p>Il permet de s'ouvrir aux différentes manières de developper une intelligence artificielle dans un cadre amusant.</p>
+      <a href="https://fr.wikipedia.org/wiki/Gomoku" role="button" class="btn btn-primary">Bouton</a>
+  </div>
+  </div>
+  </div>
+
+  <!-- FOOTER -->
   <div class="col-sm-12 center-footer">
     <h2 class="yellow-underline">Newsletter</h2>
     <br>
