--- a/html/Competences - skills.html
+++ b/html/Competences - skills.html
@@ -45,7 +45,7 @@
   <div class="container center">
     <div class="row justify-content-center">
       <div class="col-sm-8">
-        <h1 class="pink-underline">Compétences</h1>
+        <h1>Compétences</h1>
         <h3>Voici les compétences que nous avons acquises au cours de nos études et de nos expériences professionnelles.
         </h3>
 
